Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-5734

CONNECT crashes when selecting from table_type=pivot table

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.0.8
    • 10.0.10
    • None
    • mariadb-10.0.8-linux-x86_64 on CentOS 6.5

    Description

      CREATE TABLE `t1` (
        `id` int(10) unsigned NOT NULL AUTO_INCREMENT,
        `name` varchar(32) DEFAULT NULL,
        `cnt` int(11) DEFAULT NULL,
        PRIMARY KEY (`id`)
      ) ENGINE=InnoDB AUTO_INCREMENT=6 DEFAULT CHARSET=latin1;
      INSERT INTO `t1` VALUES (1,'apple',1),(2,'banana',1),(3,'apple',2),(4,'cherry',4),(5,'durazno',2);
      CREATE TABLE fruit_pivot ENGINE=CONNECT TABLE_TYPE=pivot TABNAME=t1;
      select * from fruit_pivot;

      stack_bottom = 0x7f5a379fde00 thread_stack 0x48000
      addr2line: './bin/mysqld': No such file
      ./bin/mysqld(my_print_stacktrace+0x2e)[0xb9020e]
      ./bin/mysqld(handle_fatal_signal+0x44c)[0x70ceac]
      /lib64/libpthread.so.0(+0xf710)[0x7f5a65964710]
      /lib64/libc.so.6(strcat+0x170)[0x7f5a648728c0]
      /home/kolbe/mysql/mariadb-10.0.8-linux-x86_64/lib/plugin/ha_connect.so(_ZN8TDBPIVOT14GetSourceTableEP7_global+0x1f0)[0x7f5a377486b0]
      /home/kolbe/mysql/mariadb-10.0.8-linux-x86_64/lib/plugin/ha_connect.so(_ZN8TDBPIVOT6OpenDBEP7_global+0xdc)[0x7f5a377488dc]
      /home/kolbe/mysql/mariadb-10.0.8-linux-x86_64/lib/plugin/ha_connect.so(_Z12CntOpenTableP7_globalP3TDB4MODEPcS4_bP10ha_connect+0x199)[0x7f5a377004b9]
      /home/kolbe/mysql/mariadb-10.0.8-linux-x86_64/lib/plugin/ha_connect.so(_ZN10ha_connect9OpenTableEP7_globalb+0x220)[0x7f5a376f8200]
      /home/kolbe/mysql/mariadb-10.0.8-linux-x86_64/lib/plugin/ha_connect.so(_ZN10ha_connect8rnd_initEb+0xdd)[0x7f5a376f865d]
      ./bin/mysqld(_ZN7handler22ha_rnd_init_with_errorEb+0x20)[0x7101f0]
      ./bin/mysqld(_Z16init_read_recordP11READ_RECORDP3THDP5TABLEP10SQL_SELECTibb+0x45c)[0x82c4ac]
      ./bin/mysqld(_Z21join_init_read_recordP13st_join_table+0x75)[0x5b5625]
      ./bin/mysqld(_Z10sub_selectP4JOINP13st_join_tableb+0x114)[0x5d1584]
      ./bin/mysqld[0x5d1cad]
      ./bin/mysqld(_ZN4JOIN10exec_innerEv+0xc7c)[0x5e4b1c]
      ./bin/mysqld(_Z12mysql_selectP3THDPPP4ItemP10TABLE_LISTjR4ListIS1_ES2_jP8st_orderSB_S2_SB_yP13select_resultP18st_select_lex_unitP13st_select_lex+0x26a)[0x5e338a]
      ./bin/mysqld(_Z13handle_selectP3THDP3LEXP13select_resultm+0x27d)[0x5e6f8d]
      ./bin/mysqld[0x58d6d0]
      ./bin/mysqld(_Z21mysql_execute_commandP3THD+0x965)[0x590515]
      ./bin/mysqld(_Z11mysql_parseP3THDPcjP12Parser_state+0x25a)[0x59790a]
      ./bin/mysqld(_Z16dispatch_command19enum_server_commandP3THDPcj+0x1827)[0x5996a7]
      ./bin/mysqld(_Z10do_commandP3THD+0xe5)[0x599da5]
      ./bin/mysqld(_Z24do_handle_one_connectionP3THD+0x164)[0x65f754]
      ./bin/mysqld(handle_one_connection+0x42)[0x65f892]
      ./bin/mysqld[0xa30e7b]
      /lib64/libpthread.so.0(+0x79d1)[0x7f5a6595c9d1]
      /lib64/libc.so.6(clone+0x6d)[0x7f5a648dbb6d]

      Attachments

        Activity

          People

            bertrandop Olivier Bertrand
            kolbe Kolbe Kegel (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 0.5d
                0.5d

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.