- Fix bug MDEV-5734 modified:   storage/connect/mysql-test/connect/r/pivot.result   storage/connect/mysql-test/connect/t/pivot.test   storage/connect/tabmysql.cpp   storage/connect/tabpivot.cpp

- Implement a first experimental support of MRR
  (compiled only if MRRBKA_SUPPORT is defined)
modified:
  storage/connect/colblk.h
  storage/connect/connect.cc
  storage/connect/connect.h
  storage/connect/global.h
  storage/connect/ha_connect.cc
  storage/connect/ha_connect.h
  storage/connect/plugutil.c
  storage/connect/user_connect.cc